Early balance changes for Agricraft and Pneumaticraft

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6659,6 +6659,9 @@ gardentrees {
     B:thinlog.13029=false
     B:thinlog.13030=false
     B:thinlog.13031=false
+    B:thinlog.13055=false
+    B:thinlog.13056=false
+    B:thinlog.13057=false
     B:thinlog.13058=false
     B:thinlog.13059=false
     B:thinlog.13060=false
@@ -6848,6 +6851,7 @@ gardentrees {
     B:thinlog.4839=false
     B:thinlog.4857=false
     B:thinlog.4863=false
+    B:thinlog.4864=false
     B:thinlog.4865=false
     B:thinlog.4866=false
     B:thinlog.4867=false
@@ -7006,6 +7010,7 @@ gardentrees {
     B:thinlog.743=false
     B:thinlog.761=false
     B:thinlog.767=false
+    B:thinlog.768=false
     B:thinlog.769=false
     B:thinlog.770=false
     B:thinlog.771=false
@@ -7071,6 +7076,9 @@ gardentrees {
     B:thinlog.8933=false
     B:thinlog.8934=false
     B:thinlog.8935=false
+    B:thinlog.8959=false
+    B:thinlog.8960=false
+    B:thinlog.8961=false
     B:thinlog.8962=false
     B:thinlog.8963=false
     B:thinlog.8964=false
@@ -7302,6 +7310,9 @@ gardentrees {
     B:thinlogfence.13029=false
     B:thinlogfence.13030=false
     B:thinlogfence.13031=false
+    B:thinlogfence.13055=false
+    B:thinlogfence.13056=false
+    B:thinlogfence.13057=false
     B:thinlogfence.13058=false
     B:thinlogfence.13059=false
     B:thinlogfence.13060=false
@@ -7491,6 +7502,7 @@ gardentrees {
     B:thinlogfence.4839=false
     B:thinlogfence.4857=false
     B:thinlogfence.4863=false
+    B:thinlogfence.4864=false
     B:thinlogfence.4865=false
     B:thinlogfence.4866=false
     B:thinlogfence.4867=false
@@ -7649,6 +7661,7 @@ gardentrees {
     B:thinlogfence.743=false
     B:thinlogfence.761=false
     B:thinlogfence.767=false
+    B:thinlogfence.768=false
     B:thinlogfence.769=false
     B:thinlogfence.770=false
     B:thinlogfence.771=false
@@ -7714,6 +7727,9 @@ gardentrees {
     B:thinlogfence.8933=false
     B:thinlogfence.8934=false
     B:thinlogfence.8935=false
+    B:thinlogfence.8959=false
+    B:thinlogfence.8960=false
+    B:thinlogfence.8961=false
     B:thinlogfence.8962=false
     B:thinlogfence.8963=false
     B:thinlogfence.8964=false
