--- a/config/agricraft/Configuration.cfg
+++ b/config/agricraft/Configuration.cfg
@@ -5,7 +5,7 @@ agricraft {
     B:"Clear tall grass drops"=false
 
     # The maximum attainable value of the stats on a crop [range: 1 ~ 10, default: 10]
-    I:"Crop stat cap"=10
+    I:"Crop stat cap"=8
 
     # The number of crops you get per crafting operation [range: 1 ~ 4, default: 4]
     I:"Crops per craft"=4
@@ -74,7 +74,7 @@ compatibility {
     B:"NEI Products"=true
 
     # set to false to disable compatibility for Natura [default: true]
-    B:Natura=true
+    B:Natura=false
 
     # set to false to disable compatibility for NotEnoughItems [default: true]
     B:NotEnoughItems=true
@@ -104,10 +104,10 @@ debug {
 
 decoration {
     # Set to true to disable the decorative custom wood fences [default: false]
-    B:"Disable fences"=false
+    B:"Disable fences"=true
 
     # Set to true to disable the decorative custom wood grates [default: false]
-    B:"Disable grates"=false
+    B:"Disable grates"=true
 }
 
 
@@ -131,7 +131,7 @@ farming {
     #  2 parents: 2/4 decrement, 1/4 nothing, 1/4 increment.
     #  3 parents: 1/4 decrement, 1/2 nothing, 1/4 increment.
     #  4 parents: 1/4 decrement, 1/4 nothing, 1/2 increment. [default: false]
-    B:"Hardcore stats"=false
+    B:"Hardcore stats"=true
 
     # set to false to disable mod specific drops, this will (for instance) cause Natura berries to drop from Harvestcraft berry crops [default: true]
     B:"Mod specific drops"=true
@@ -182,7 +182,7 @@ irrigation {
     B:"Fill tank from flowing water"=false
 
     # set to false to disable placing a source block when breaking non-empty tanks [default: true]
-    B:"Spawn water after breaking tank"=true
+    B:"Spawn water after breaking tank"=false
 
     # Every x seconds each plant in sprinkler range has this chance to growth tick [range: 0 ~ 100, default: 20]
     I:"Sprinkler growth chance"=20
