--- a/config/Natura.cfg
+++ b/config/Natura.cfg
@@ -21,7 +21,7 @@ disabler {
     B:"Generate Hopseed Trees"=true
     B:"Generate Maloberry Bushes"=false
     B:"Generate Maple Trees"=true
-    B:"Generate Overworld Clouds"=true
+    B:"Generate Overworld Clouds"=false
     B:"Generate Raspberry Bushes"=false
     B:"Generate Redwood Trees"=true
     B:"Generate Saguaro Cactus"=true
