--- a/config/PneumaticCraft.cfg
+++ b/config/PneumaticCraft.cfg
@@ -16,7 +16,7 @@ general {
     B:"Allow dirt to be bonemealed for plastic plants"=false
 
     # Loss percentage (on average) of Compressed Iron ingots/blocks when exposed to an explosion.
-    I:"Compressed Iron Loss Percentage"=20
+    I:"Compressed Iron Loss Percentage"=80
 
     # When true, Creepers when dropping a Creeper Plant Seed will create a tiny explosion. [default: false]
     B:"Enable Creeper Explosions on seed drop"=false
@@ -24,11 +24,11 @@ general {
     B:"Enable Drone Suffocation Damage"=true
 
     # Enables the dungeon loot generation of the Nuke Virus and Stop! Worm. Useless items when playing SSP.
-    B:"Enable Dungeon Loot generation"=true
+    B:"Enable Dungeon Loot generation"=false
     B:"Enable Enderman Seed Drops"=false
     B:"Enable Slime Seed Drops"=false
     B:"Enable Squid Seed Drops"=false
-    B:"Enable Update Checker"=true
+    B:"Enable Update Checker"=false
     B:"Include Plastic Plants on bonemealing"=false
 
     # Damage of the Miniguns. This applies to the Sentry Gun, Handheld Minigun, and Drone-based minigun.
@@ -44,7 +44,7 @@ general {
     I:"Villager Mechanic ID"=125
 
     # Chance per chunk in percentage to generate an Oil Lake. Set to 0 for no spawns
-    D:oil_generation_chance=15.0
+    D:oil_generation_chance=0
 }
 
 
@@ -92,28 +92,28 @@ helmet_options {
 
 machine_properties {
     # Changing this value will alter the pressurized air production of the Electric Compressor. The input, EU, will stay the same.
-    I:"Electric Compressor (IC2 --> PneumaticCraft) efficiency"=40
+    I:"Electric Compressor (IC2 --> PneumaticCraft) efficiency"=20
 
     # Changing this value will alter the pressurized air production of the Flux Compressor. The input, RF, will stay the same.
-    I:"Flux Compressor (RF --> PneumaticCraft) efficiency"=40
+    I:"Flux Compressor (RF --> PneumaticCraft) efficiency"=20
 
     # The max height of an elevator per stacked Elevator Base. [range: 1 ~ 256, default: 4]
     I:"Height per Elevator Base"=4
 
     # Changing this value will alter the pressurized air production of the Kinetic Compressor. The input, MJ, will stay the same.
-    I:"Kinetic Compressor (Buildcraft --> PneumaticCraft) efficiency"=40
+    I:"Kinetic Compressor (Buildcraft --> PneumaticCraft) efficiency"=20
 
     # Changing this value will alter the pressurized air usage of the Pneumatic Dynamo. The output, RF, will stay the same.
-    I:"Pneumatic Dynamo (PneumaticCraft --> RF) efficiency"=40
+    I:"Pneumatic Dynamo (PneumaticCraft --> RF) efficiency"=5
 
     # Changing this value will alter the pressurized air usage of the Pneumatic Engine. The output, MJ, will stay the same.
-    I:"Pneumatic Engine (PneumaticCraft --> Buildcraft) efficiency"=40
+    I:"Pneumatic Engine (PneumaticCraft --> Buildcraft) efficiency"=20
 
     # Changing this value will alter the pressurized air usage of the Pneumatic Generator. The output, EU, will stay the same.
-    I:"Pneumatic Generator (PneumaticCraft --> IC2) efficiency"=40
+    I:"Pneumatic Generator (PneumaticCraft --> IC2) efficiency"=20
 
     # Changing this value will alter the hydraulic bar production of the Pneumatic Pump. The input, air, will stay the same.
-    I:"Pneumatic Pump (PneumaticCraft --> Hydraulicraft) efficiency"=40
+    I:"Pneumatic Pump (PneumaticCraft --> Hydraulicraft) efficiency"=20
 }
 
 
@@ -185,18 +185,18 @@ recipe_enabling {
 ##########################################################################################################
 
 third_party_enabling {
-    B:AWWayofTime=true
+    B:AWWayofTime=false
     B:"BuildCraft|Core"=true
     B:CoFHCore=true
     B:ComputerCraft=true
-    B:EE3=true
+    B:EE3=false
     B:EnderIO=true
     B:Forestry=true
     B:ForgeMultipart=true
     B:HydCraft=true
-    B:IC2=true
+    B:IC2=false
     B:IGWMod=true
-    B:MineFactoryReloaded=true
+    B:MineFactoryReloaded=false
     B:OpenBlocks=true
     B:"OpenComputers|Core"=true
     B:Thaumcraft=true
