Before adding MO, BR

--- a/config/etfuturum.cfg
+++ b/config/etfuturum.cfg
@@ -46,7 +46,7 @@ general {
     B:"Slime Block"=true
     B:Sponge=true
     B:"Stone Brick Recipes"=true
-    B:Stones=true
+    B:Stones=false
     B:"Tipped Arrows"=true
     B:"Use updated food values"=true
     B:"Use updated harvest levels"=true
