--- a/config/gendustry/client.config
+++ b/config/gendustry/client.config
@@ -14,7 +14,7 @@ nei {
     B:"Add Mutatron Recipes"=true
     B:"Add Replicator Recipes"=true
     B:"Add Sampler Recipes"=true
-    B:"Add Samples to Search"=true
+    B:"Add Samples to Search"=false
     B:"Add Transposer Recipes"=true
 }
 
