--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -20,7 +20,7 @@
     B:"No Generation Changes"=false
 
     # suppress Bop sub-biome generation
-    B:NoBoPSubBiomes=true
+    B:NoBoPSubBiomes=false
 
     # Percentage of rivers prevented; changes cause chunk boundaries at some rivers
     I:PercentRiverReduction=100
