--- a/config/enviromine/profiles/default/CustomProperties/ElectriCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ElectriCraft.cfg
@@ -1,2 +1,130 @@
 # Configuration file
 
+blocks {
+
+    wire_insulated_16 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=16
+        S:03.DropName=
+        I:04.DropMetaID=16
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_17 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=17
+        S:03.DropName=
+        I:04.DropMetaID=17
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_18 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=18
+        S:03.DropName=
+        I:04.DropMetaID=18
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_19 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=19
+        S:03.DropName=
+        I:04.DropMetaID=19
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_20 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=20
+        S:03.DropName=
+        I:04.DropMetaID=20
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_21 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=21
+        S:03.DropName=
+        I:04.DropMetaID=21
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_22 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=22
+        S:03.DropName=
+        I:04.DropMetaID=22
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_23 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=23
+        S:03.DropName=
+        I:04.DropMetaID=23
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+    wire_insulated_24 {
+        S:01.Name=electricraft:electricraft_item_wire
+        I:02.MetaID=24
+        S:03.DropName=
+        I:04.DropMetaID=24
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=25.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
