--- a/config/enviromine/profiles/default/CustomProperties/ElectriCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ElectriCraft.cfg
@@ -1,5 +1,11 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
 blocks {
 
     wire_insulated_16 {
@@ -16,6 +22,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_17 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=17
@@ -30,6 +37,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_18 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=18
@@ -44,6 +52,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_19 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=19
@@ -58,6 +67,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_20 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=20
@@ -72,6 +82,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_21 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=21
@@ -86,6 +97,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_22 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=22
@@ -100,6 +112,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_23 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=23
@@ -114,6 +127,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
     wire_insulated_24 {
         S:01.Name=electricraft:electricraft_item_wire
         I:02.MetaID=24
@@ -128,3 +142,7 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
+
+}
+
+
