--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -116,6 +116,7 @@ dimletsettings {
     I:"rarity.Material.tile.bluepower:amethyst_ore"=3
     I:"rarity.Material.tile.bluepower:ruby_ore"=3
     I:"rarity.Material.tile.bluepower:teslatite_ore"=3
+    I:rarity.Material.tile.dilithium_ore=3
     I:rarity.Material.tile.dimensionalShardBlock=4
     I:rarity.Material.tile.gcBlockCore7=3
     I:rarity.Material.tile.gcBlockCore8=3
@@ -309,6 +310,7 @@ dimletsettings {
     I:"rfcreate.Material.tile.bluepower:amethyst_ore"=8000
     I:"rfcreate.Material.tile.bluepower:ruby_ore"=8000
     I:"rfcreate.Material.tile.bluepower:teslatite_ore"=8000
+    I:rfcreate.Material.tile.dilithium_ore=12000
     I:rfcreate.Material.tile.dimensionalShardBlock=15000
     I:rfcreate.Material.tile.gcBlockCore7=8000
     I:rfcreate.Material.tile.gcBlockCore8=8000
@@ -508,6 +510,7 @@ dimletsettings {
     I:"rfmaintain.Material.tile.bluepower:amethyst_ore"=4000
     I:"rfmaintain.Material.tile.bluepower:ruby_ore"=4000
     I:"rfmaintain.Material.tile.bluepower:teslatite_ore"=4000
+    I:rfmaintain.Material.tile.dilithium_ore=8000
     I:rfmaintain.Material.tile.dimensionalShardBlock=8000
     I:rfmaintain.Material.tile.gcBlockCore7=4000
     I:rfmaintain.Material.tile.gcBlockCore8=4000
@@ -705,6 +708,7 @@ dimletsettings {
     I:"ticks.Material.tile.bluepower:amethyst_ore"=700
     I:"ticks.Material.tile.bluepower:ruby_ore"=700
     I:"ticks.Material.tile.bluepower:teslatite_ore"=700
+    I:ticks.Material.tile.dilithium_ore=800
     I:ticks.Material.tile.dimensionalShardBlock=500
     I:ticks.Material.tile.gcBlockCore7=700
     I:ticks.Material.tile.gcBlockCore8=700
