Harder Ores ore working again.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1939,6 +1939,11 @@ biomesoplenty {
     B:newBopDirt.4=true
     B:newBopDirt.5=true
     B:newBopFarmland=false
+    B:newBopFarmland.1=false
+    B:newBopFarmland.2=false
+    B:newBopFarmland.3=false
+    B:newBopFarmland.4=false
+    B:newBopFarmland.5=false
     B:newBopGrass=false
     B:newBopGrass.1=false
     B:newBopGrass.2=false
@@ -5013,6 +5018,13 @@ etfuturum {
     B:stone.4=true
     B:stone.5=true
     B:stone.6=true
+}
+
+
+exoticbirds {
+    B:eggsorter=false
+    B:nest=false
+    B:phoenixegg=false
 }
 
 
@@ -13079,6 +13091,9 @@ immersiveengineering {
     B:metalDecoration.7=false
     B:metalDecoration.8=false
     B:metalDecoration.9=false
+    B:metalDecoration2=false
+    B:metalDecoration2.1=false
+    B:metalDecoration2.2=false
     B:metalDevice=false
     B:metalDevice.1=false
     B:metalDevice.10=false
@@ -13098,6 +13113,7 @@ immersiveengineering {
     B:metalDevice2=false
     B:metalDevice2.1=false
     B:metalDevice2.10=false
+    B:metalDevice2.11=false
     B:metalDevice2.2=false
     B:metalDevice2.3=false
     B:metalDevice2.4=false
@@ -13120,6 +13136,7 @@ immersiveengineering {
     B:stoneDecoration.3=false
     B:stoneDecoration.4=false
     B:stoneDecoration.5=false
+    B:stoneDecoration.6=true
     B:stoneDevice=false
     B:stoneDevice.1=false
     B:stoneDevice.2=false
@@ -17075,6 +17092,11 @@ securitycraft {
 simpleachievements {
     B:saachievementStand=false
     B:sadecorationBlock=true
+}
+
+
+smallboats {
+    B:BlockDisplaceWater=false
 }
 
 
