--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -1963,6 +1963,144 @@ shedding {
     I:etfuturum.wooden_armorstand.lexiconDisplaySize=40
     I:etfuturum.wooden_armorstand.metadata=0
     I:etfuturum.wooden_armorstand.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Cassowary
+    S:exoticbirds.EB_Cassowary.item=
+    I:exoticbirds.EB_Cassowary.lexiconDisplaySize=40
+    I:exoticbirds.EB_Cassowary.metadata=0
+    I:exoticbirds.EB_Cassowary.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Duck
+    S:exoticbirds.EB_Duck.item=
+    I:exoticbirds.EB_Duck.lexiconDisplaySize=40
+    I:exoticbirds.EB_Duck.metadata=0
+    I:exoticbirds.EB_Duck.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Flamingo
+    S:exoticbirds.EB_Flamingo.item=
+    I:exoticbirds.EB_Flamingo.lexiconDisplaySize=40
+    I:exoticbirds.EB_Flamingo.metadata=0
+    I:exoticbirds.EB_Flamingo.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_GouldianFinch
+    S:exoticbirds.EB_GouldianFinch.item=
+    I:exoticbirds.EB_GouldianFinch.lexiconDisplaySize=40
+    I:exoticbirds.EB_GouldianFinch.metadata=0
+    I:exoticbirds.EB_GouldianFinch.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Hummingbird
+    S:exoticbirds.EB_Hummingbird.item=
+    I:exoticbirds.EB_Hummingbird.lexiconDisplaySize=40
+    I:exoticbirds.EB_Hummingbird.metadata=0
+    I:exoticbirds.EB_Hummingbird.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Kingfisher
+    S:exoticbirds.EB_Kingfisher.item=
+    I:exoticbirds.EB_Kingfisher.lexiconDisplaySize=40
+    I:exoticbirds.EB_Kingfisher.metadata=0
+    I:exoticbirds.EB_Kingfisher.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Kiwi
+    S:exoticbirds.EB_Kiwi.item=
+    I:exoticbirds.EB_Kiwi.lexiconDisplaySize=40
+    I:exoticbirds.EB_Kiwi.metadata=0
+    I:exoticbirds.EB_Kiwi.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Lyrebird
+    S:exoticbirds.EB_Lyrebird.item=
+    I:exoticbirds.EB_Lyrebird.lexiconDisplaySize=40
+    I:exoticbirds.EB_Lyrebird.metadata=0
+    I:exoticbirds.EB_Lyrebird.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Magpie
+    S:exoticbirds.EB_Magpie.item=
+    I:exoticbirds.EB_Magpie.lexiconDisplaySize=40
+    I:exoticbirds.EB_Magpie.metadata=0
+    I:exoticbirds.EB_Magpie.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Ostrich
+    S:exoticbirds.EB_Ostrich.item=
+    I:exoticbirds.EB_Ostrich.lexiconDisplaySize=40
+    I:exoticbirds.EB_Ostrich.metadata=0
+    I:exoticbirds.EB_Ostrich.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Owl
+    S:exoticbirds.EB_Owl.item=
+    I:exoticbirds.EB_Owl.lexiconDisplaySize=40
+    I:exoticbirds.EB_Owl.metadata=0
+    I:exoticbirds.EB_Owl.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Parrot
+    S:exoticbirds.EB_Parrot.item=
+    I:exoticbirds.EB_Parrot.lexiconDisplaySize=40
+    I:exoticbirds.EB_Parrot.metadata=0
+    I:exoticbirds.EB_Parrot.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Peafowl
+    S:exoticbirds.EB_Peafowl.item=
+    I:exoticbirds.EB_Peafowl.lexiconDisplaySize=40
+    I:exoticbirds.EB_Peafowl.metadata=0
+    I:exoticbirds.EB_Peafowl.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Pelican
+    S:exoticbirds.EB_Pelican.item=
+    I:exoticbirds.EB_Pelican.lexiconDisplaySize=40
+    I:exoticbirds.EB_Pelican.metadata=0
+    I:exoticbirds.EB_Pelican.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Penguin
+    S:exoticbirds.EB_Penguin.item=
+    I:exoticbirds.EB_Penguin.lexiconDisplaySize=40
+    I:exoticbirds.EB_Penguin.metadata=0
+    I:exoticbirds.EB_Penguin.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Phoenix
+    S:exoticbirds.EB_Phoenix.item=
+    I:exoticbirds.EB_Phoenix.lexiconDisplaySize=40
+    I:exoticbirds.EB_Phoenix.metadata=0
+    I:exoticbirds.EB_Phoenix.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Pigeon
+    S:exoticbirds.EB_Pigeon.item=
+    I:exoticbirds.EB_Pigeon.lexiconDisplaySize=40
+    I:exoticbirds.EB_Pigeon.metadata=0
+    I:exoticbirds.EB_Pigeon.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Roadrunner
+    S:exoticbirds.EB_Roadrunner.item=
+    I:exoticbirds.EB_Roadrunner.lexiconDisplaySize=40
+    I:exoticbirds.EB_Roadrunner.metadata=0
+    I:exoticbirds.EB_Roadrunner.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Seagull
+    S:exoticbirds.EB_Seagull.item=
+    I:exoticbirds.EB_Seagull.lexiconDisplaySize=40
+    I:exoticbirds.EB_Seagull.metadata=0
+    I:exoticbirds.EB_Seagull.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Swan
+    S:exoticbirds.EB_Swan.item=
+    I:exoticbirds.EB_Swan.lexiconDisplaySize=40
+    I:exoticbirds.EB_Swan.metadata=0
+    I:exoticbirds.EB_Swan.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Toucan
+    S:exoticbirds.EB_Toucan.item=
+    I:exoticbirds.EB_Toucan.lexiconDisplaySize=40
+    I:exoticbirds.EB_Toucan.metadata=0
+    I:exoticbirds.EB_Toucan.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Vulture
+    S:exoticbirds.EB_Vulture.item=
+    I:exoticbirds.EB_Vulture.lexiconDisplaySize=40
+    I:exoticbirds.EB_Vulture.metadata=0
+    I:exoticbirds.EB_Vulture.rate=-1
+
+    # Configuration of Shedding for exoticbirds.EB_Woodpecker
+    S:exoticbirds.EB_Woodpecker.item=
+    I:exoticbirds.EB_Woodpecker.lexiconDisplaySize=40
+    I:exoticbirds.EB_Woodpecker.metadata=0
+    I:exoticbirds.EB_Woodpecker.rate=-1
     S:failed_chicken.item=
     I:failed_chicken.lexiconDisplaySize=40
     I:failed_chicken.metadata=0
