--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -10,6 +10,9 @@ general {
     # Enchantment ID for the Pulverizer enchantment. [range: 64 ~ 255, default: 81]
     I:PulverizerEnchantmentID=81
 
+    # Toggle to enable/disable asthetic water placement. [default: true]
+    B:sluicePlacesWaterSource=false
+
     # If Gany's Surface, Et Futurum, or Chisel is installed and this is true, cobblestone cannot be used to create stone tools,
     # instead diorite is used. This prolongs the life of wood tools so it isn't "make a wood pickaxe to
     # mine 3 stone and upgrade." [default: true]
@@ -48,13 +51,11 @@ milling {
 ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
-    I:OreExists...=1
+    I:OreExists...=2
     I:OreExistsAluminum=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=2
-
-    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -63,18 +64,16 @@ ores {
     I:OreExistsNickel=2
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsOsmium=1
+    I:OreExistsOsmium=0
     I:OreExistsSilver=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=2
-
-    #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
-    I:OreExistsZinc=1
+    I:OreExistsZinc=2
 }
 
 
