--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -61,6 +61,9 @@
     # subbiomes not saved on edges, default 3, -1 deactivates saving sub-biomes
     I:subBiomeRingsNotSaved=0
 
+    # suppress Climate Control generation in default, large biomes, and amplified worlds
+    B:suppressInStandardWorlds=false
+
     # True for double-width beaches
     B:wideBeaches=false
 }
@@ -119,16 +122,16 @@ general {
 
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
-    I:"Large Continent Frequency"=0
+    I:"Large Continent Frequency"=20
 
     # frequency of large island seeds, about 1000x2000
-    I:"Large Island Frequency"=140
+    I:"Large Island Frequency"=180
 
     # frequency of medium continent seeds, about 4000x8000
     I:"Medium Continent Frequency"=48
 
     # frequency of medium island seeds, about 500x1000
-    I:"Medium Island Frequency"=160
+    I:"Medium Island Frequency"=80
 
     # True reduces the chance of landmasses merging
     B:SeparateLandmasses=true
