--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -13,6 +13,9 @@ compatability {
     # Set this to false to disable IE's built in compatability with CarpentersBlocks
     B:"Enable Compatmodule: CarpentersBlocks"=true
 
+    # Set this to false to disable IE's built in compatability with ComputerCraft
+    B:"Enable Compatmodule: ComputerCraft"=true
+
     # Set this to false to disable IE's built in compatability with EE3
     B:"Enable Compatmodule: EE3"=false
 
@@ -43,6 +46,9 @@ compatability {
     # Set this to false to disable IE's built in compatability with MineTweaker3
     B:"Enable Compatmodule: MineTweaker3"=true
 
+    # Set this to false to disable IE's built in compatability with OpenComputers
+    B:"Enable Compatmodule: OpenComputers"=true
+
     # Set this to false to disable IE's built in compatability with Railcraft
     B:"Enable Compatmodule: Railcraft"=true
 
@@ -63,6 +69,9 @@ compatability {
 
     # Set this to false to disable IE's built in compatability with Waila
     B:"Enable Compatmodule: Waila"=true
+
+    # Set this to false to disable IE's built in compatability with appliedenergistics2
+    B:"Enable Compatmodule: appliedenergistics2"=true
 
     # Set this to false to disable IE's built in compatability with chisel
     B:"Enable Compatmodule: chisel"=true
@@ -139,6 +148,9 @@ general {
     # Set this to false to prevent wires from outputting GregTech EU
     B:"GregTech Compatability"=true
 
+    # The maximum durability of the Engineer's Hammer. Used up when hammering ingots into plates.
+    I:"Hammer Durability"=100
+
     # Set this to false to prevent wires from accepting and outputting EU
     B:"IC2 Compatability"=true
 
@@ -149,12 +161,12 @@ general {
     B:"Increased Tile Renderdistance"=1.5
 
     # The last version of IE that was run in this instance. DO NOT CHANGE THIS, IT WILL BREAK THINGS.
-    D:LastVersion=0.64
+    D:LastVersion=0.7
 
     # Set this to false to disable the super awesome looking nixie tube front for the voltmeter and other things
     B:NixietubeFont=true
 
-    # A list of preferred Mod IDs that results of IE processes should stem from, aka which mod you want the copper to come from. This affects the ores dug by the excavator, as well as those crushing recipes that don't have associated IE items. This list is in oreder of priority.
+    # A list of preferred Mod IDs that results of IE processes should stem from, aka which mod you want the copper to come from. This affects the ores dug by the excavator, as well as those crushing recipes that don't have associated IE items. This list is in order of priority.
     S:"Preferred Ores" <
         ImmersiveEngineering
         ThermalFoundation
@@ -187,6 +199,9 @@ machines {
 
     # The RF the Assembler will consume to craft an item from a recipe
     I:"Assembler: Consumed"=80
+
+    # The RF per tick the Blast Furnace Preheater will consume to speed up the Blast Furnace
+    I:"BlastFurnacePreheater: Charge"=32
 
     # The RF the Bottling Machine will consume per tick, when filling items
     I:"Bottling: Consumed"=8
@@ -355,7 +370,7 @@ oregen {
 
 potions {
     # The potion ID for the Conductive potion effect
-    I:Conductive=29
+    I:Conductive=31
 
     # The potion ID for the Flammable potion effect
     I:Flammable=27
