--- a/config/betterrain/betterrain.cfg
+++ b/config/betterrain/betterrain.cfg
@@ -16,24 +16,41 @@ aurora {
     # Number of blocks to say fixed above player if Aurora is player relative [range: 16.0 ~ 2048.0, default: 64.0]
     S:"Player Fixed Height"=64.0
 
-    # Comma separated biome names where Auroras can be triggered [default: ]
+    # Number of blocks north of player location to spawn an aurora [range: 0 ~ 200, default: 150]
+    I:"Spawn Offset"=150
     S:"Trigger Biomes"=
 }
 
 
 biomes {
+    # Configuration files for configuring Biome Registry [default: ]
+    S:"Config Files" <
+     >
 
     override {
-        # Comma separated biome names to apply dust weather effect [default: ]
         S:Dust=
-
-        # Comma separated biome names to apply NO weather effect [default: ]
         S:None=
-
-        # Comma separated biome names to apply rain/snow weather effect [default: ]
         S:Precipitation=
     }
 
+}
+
+
+fog {
+    # Enable biome specific fog density and color [default: true]
+    B:"Biome Fog"=true
+
+    # Allow desert fog when raining [default: true]
+    B:"Desert Fog"=true
+
+    # Visibility factor to apply to desert fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
+    S:"Desert Fog Factor"=0.4
+
+    # Higher the player elevation the more haze that is experienced [default: true]
+    B:"Elevation Haze"=true
+
+    # Visibility factor to apply to elevation haze (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
+    S:"Elevation Haze Factor"=0.2
 }
 
 
@@ -86,18 +103,13 @@ rain {
 
     # Allow desert dust when raining [default: true]
     B:"Desert Dust"=true
-
-    # Allow desert fog when raining [default: true]
     B:"Desert Fog"=true
-
-    # Visibility factor to apply to desert fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
     S:"Desert Fog Factor"=1.0
-
-    # Higher the player elevation the more haze that is experienced [default: true]
     B:"Elevation Haze"=true
-
-    # Visibility factor to apply to elevation haze (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
     S:"Elevation Haze Factor"=1.0
+
+    # Reset rain/thunder when all players sleep [default: true]
+    B:"Reset Rain on Sleep"=true
 
     # Factor to apply to rain sound level to adjust [range: 0.0 ~ 1.0, default: 1.0]
     S:"Sound Level"=1.0
