--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -30,8 +30,6 @@
 
     # add testing routines and crash in suspicious circumstances
     B:TestingMode=false
-
-    # Include vanilla biomes in world
     B:VanillaBiomesOn=true
 
     # Generate land masses and climate zones similar to vanilla 1.7
@@ -59,7 +57,7 @@
     D:maxChasm=10.0
 
     # subbiomes not saved on edges, default 3, -1 deactivates saving sub-biomes
-    I:subBiomeRingsNotSaved=0
+    I:subBiomeRingsNotSaved=-1
 
     # suppress Climate Control generation in default, large biomes, and amplified worlds
     B:suppressInStandardWorlds=false
@@ -108,12 +106,6 @@
 }
 
 
-general {
-    S:excludeDimensionIDs=-1,1
-    S:includeDimensionIDs=0
-}
-
-
 ##########################################################################################################
 # ocean control parameters
 #--------------------------------------------------------------------------------------------------------#
@@ -122,24 +114,30 @@ general {
 
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
-    I:"Large Continent Frequency"=20
+    I:"Large Continent Frequency"=30
 
-    # frequency of large island seeds, about 1000x2000
-    I:"Large Island Frequency"=180
+    # frequency of large island seeds, about 500x1000
+    I:"Large Island Frequency"=80
 
     # frequency of medium continent seeds, about 4000x8000
-    I:"Medium Continent Frequency"=48
+    I:"Medium Continent Frequency"=80
 
-    # frequency of medium island seeds, about 500x1000
-    I:"Medium Island Frequency"=80
+    # frequency of medium island seeds, about 250x500
+    I:"Medium Island Frequency"=40
 
     # True reduces the chance of landmasses merging
     B:SeparateLandmasses=true
 
     # frequency of small continent seeds, about 2000x4000
-    I:"Small Continent Frequency"=72
+    I:"Small Continent Frequency"=80
 }
 
+
+##########################################################################################################
+# oceanbiomeclimates
+#--------------------------------------------------------------------------------------------------------#
+# Climate Types are: SNOWY,COOL,WARM,HOT,OCEAN,DEEP_OCEANMEDIUM,PLAINS,LAND.  MEDIUM is COOL and WARM, PLAINS is COOL and WARM and HOT, LAND is all four land
+##########################################################################################################
 
 oceanbiomeclimates {
     S:"DeepOcean climate"=DEEP_OCEAN
@@ -164,6 +162,12 @@ oceanbiomevillages {
     B:"Ocean hasVillages"=false
 }
 
+
+##########################################################################################################
+# vanillabiomeclimates
+#--------------------------------------------------------------------------------------------------------#
+# Climate Types are: SNOWY,COOL,WARM,HOT,OCEAN,DEEP_OCEANMEDIUM,PLAINS,LAND.  MEDIUM is COOL and WARM, PLAINS is COOL and WARM and HOT, LAND is all four land
+##########################################################################################################
 
 vanillabiomeclimates {
     S:"Birch Forest Hills M climate"=DEFAULT
