IE blast furnace and vanilla item corrections.

--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -50,24 +50,24 @@ chemistry_settings {
     I:copperVeinLevelMin=44
     I:copperVeinSizeMax=8
     I:copperVeinSizeMin=3
-    B:enableAluminum=true
+    B:enableAluminum=false
     B:enableAnkerite=true
     B:enableBeryl=true
     B:enableBismuth=true
     B:enableBoron=true
     B:enableCarnallite=true
-    B:enableChemistry=false
+    B:enableChemistry=true
     B:enableChlorite=true
     B:enableChrome=true
     B:enableCobalt=true
-    B:enableCopper=true
+    B:enableCopper=false
     B:enableEuxenite=true
     B:enableFluorite=true
     B:enableGadolinite=true
-    B:enableLead=true
-    B:enableMineCrawling=true
+    B:enableLead=false
+    B:enableMineCrawling=false
     B:enableMonazite=true
-    B:enableNickel=true
+    B:enableNickel=false
     B:enableOWCEnergySystem=true
     B:enablePhosphorite=true
     B:enablePyrite=true
@@ -130,7 +130,7 @@ gemology_settings {
     B:enableAlexandrite=true
     B:enableDiamondTiers=true
     B:enableDivination=true
-    B:enableGemology=false
+    B:enableGemology=true
     B:enableMoissanite=true
     B:enableRockVending=true
     B:enableTanksCrafting=false
@@ -224,7 +224,7 @@ rocks_building {
     B:enableJasperoid=true
     B:enableKakortokite=true
     B:enableLaterite=true
-    B:enableLimestone=true
+    B:enableLimestone=false
     B:enableLuxulyanite=true
     B:enableNoreenaJasper=true
     B:enablePietersite=true
