--- a/config/etfuturum.cfg
+++ b/config/etfuturum.cfg
@@ -41,7 +41,7 @@ general {
     B:"Red Sandstone"=true
     B:"Shearing Snow Golems"=true
     B:"Shears harvest cobwebs"=true
-    B:"Skin overlays"=true
+    B:"Skin overlays"=false
     B:"Skulls drop from charged creeper kills"=true
     B:"Slime Block"=true
     B:Sponge=true
