--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -56,7 +56,7 @@ chemistry_settings {
     B:enableBismuth=true
     B:enableBoron=true
     B:enableCarnallite=true
-    B:enableChemistry=true
+    B:enableChemistry=false
     B:enableChlorite=true
     B:enableChrome=true
     B:enableCobalt=true
@@ -130,7 +130,7 @@ gemology_settings {
     B:enableAlexandrite=true
     B:enableDiamondTiers=true
     B:enableDivination=true
-    B:enableGemology=true
+    B:enableGemology=false
     B:enableMoissanite=true
     B:enableRockVending=true
     B:enableTanksCrafting=false
@@ -366,12 +366,12 @@ ticking_settings {
 tiers_settings {
     I:TubesPlasticYeld=2
     I:coalOresFrequency=8
-    I:coalOresMaxVeinSize=16
-    I:coalOresMinVeinSize=4
+    I:coalOresMaxVeinSize=0
+    I:coalOresMinVeinSize=0
     B:enableOreTiers=false
-    I:ironOresFrequency=8
-    I:ironOresMaxVeinSize=10
-    I:ironOresMinVeinSize=4
+    I:ironOresFrequency=0
+    I:ironOresMaxVeinSize=0
+    I:ironOresMinVeinSize=0
 }
 
 
