--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -3,6 +3,45 @@
 #Deleting any element will restore it to it's default value
 
 checkUpdates=true
+inventory.cheatmode=2
+inventory.gamemodes=creative, creative+, adventure
+inventory.hidden=false
+inventory.itemIDs=1
+inventory.itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
+inventory.layoutstyle=0
+#For those who can't help themselves.
+#Set this to a mode and you will be unable to change it ingame
+inventory.lockmode=-1
+inventory.oredict=false
+inventory.profileRecipes=false
+inventory.searchmode=1
+inventory.utilities=delete, magnet
+inventory.widgetsenabled=true
+keys.gui.back=14
+keys.gui.botania_corporea_request=46
+keys.gui.enchant=45
+keys.gui.hide=24
+keys.gui.next=209
+keys.gui.potion=25
+keys.gui.prev=201
+keys.gui.recipe=19
+keys.gui.search=33
+keys.gui.usage=22
+keys.gui.xu_ping=20
+keys.showenchant=23
+keys.world.chunkoverlay=67
+keys.world.creative=0
+keys.world.dawn=0
+keys.world.dusk=0
+keys.world.heal=0
+keys.world.highlight_tips=0
+keys.world.midnight=0
+keys.world.moboverlay=65
+keys.world.noon=0
+keys.world.rain=0
+world.highlight_tips=false
+world.highlight_tips.x=5000
+world.highlight_tips.y=100
 
 #Change these options if you have a different mod installed on the server that handles the commands differently, Eg. Bukkit Essentials
 command
@@ -12,84 +51,4 @@ command
 	item=/give {0} {1} {2} {3} {4}
 	rain=/toggledownfall
 	time=/time set {0}
-}
-
-inventory
-{
-	cheatmode=2
-	gamemodes=creative, creative+, adventure
-	hidden=false
-	itemIDs=1
-	itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
-	layoutstyle=0
-	#For those who can't help themselves.
-	#Set this to a mode and you will be unable to change it ingame
-	lockmode=-1
-	oredict=false
-	profileRecipes=false
-	searchmode=1
-	utilities=delete, magnet
-	widgetsenabled=true
-}
-
-keys
-{
-	showenchant=23
-	
-	gui
-	{
-		back=14
-		botania_corporea_request=46
-		enchant=45
-		hide=24
-		next=209
-		potion=25
-		prev=201
-		recipe=19
-		search=33
-		usage=22
-		xu_ping=0
-	}
-	
-	world
-	{
-		chunkoverlay=67
-		creative=0
-		dawn=0
-		dusk=0
-		heal=0
-		highlight_tips=0
-		midnight=0
-		moboverlay=65
-		noon=0
-		rain=0
-	}
-}
-
-tools
-{
-	dump
-	{
-		biome=1
-		enchantment=0
-		itempanel=0
-		neiintegration_chestloot=0
-		neiintegration_dimension=0
-		neiintegration_entity=0
-		potion=0
-		
-		neiintegration
-		{
-			chestloot=0
-			dimension=0
-			fluid=0
-		}
-	}
-}
-
-world
-{
-	highlight_tips=false
-	highlight_tips.x=5000
-	highlight_tips.y=100
 }
