--- a/config/ProjectRed.cfg
+++ b/config/ProjectRed.cfg
@@ -94,37 +94,37 @@ Compatibility {
 ##########################################################################################################
 
 "World Gen" {
-    B:"Copper Ore"=true
+    B:"Copper Ore"=false
     I:"Copper Ore resistance"=0
     B:"Copper Ore retrogen"=false
     B:"Deviating Lily"=true
     I:"Deviating Lily resistance"=0
     B:"Deviating Lily retrogen"=false
-    B:"Electrotine Ore"=true
+    B:"Electrotine Ore"=false
     I:"Electrotine Ore resistance"=0
     B:"Electrotine Ore retrogen"=false
-    B:"Marble Caves"=true
+    B:"Marble Caves"=false
     I:"Marble Caves resistance"=0
     B:"Marble Caves retrogen"=false
-    B:"Peridot Ore"=true
+    B:"Peridot Ore"=false
     I:"Peridot Ore resistance"=0
     B:"Peridot Ore retrogen"=false
-    B:"Ruby Ore"=true
+    B:"Ruby Ore"=false
     I:"Ruby Ore resistance"=0
     B:"Ruby Ore retrogen"=false
-    B:"Sapphire Ore"=true
+    B:"Sapphire Ore"=false
     I:"Sapphire Ore resistance"=0
     B:"Sapphire Ore retrogen"=false
-    B:"Silver Ore"=true
+    B:"Silver Ore"=false
     I:"Silver Ore resistance"=0
     B:"Silver Ore retrogen"=false
     B:"Spreading Moss"=true
-    B:"Tin Ore"=true
+    B:"Tin Ore"=false
     I:"Tin Ore resistance"=0
     B:"Tin Ore retrogen"=false
     I:"Volcano resistance"=0
     B:"Volcano retrogen"=false
-    B:Volcanos=true
+    B:Volcanos=false
 }
 
 
@@ -151,37 +151,37 @@ general {
 
 
 "world generation" {
-    B:"Copper Ore"=true
+    B:"Copper Ore"=false
     I:"Copper Ore resistance"=0
     B:"Copper Ore retrogen"=false
     B:"Deviating Lily"=true
     I:"Deviating Lily resistance"=0
     B:"Deviating Lily retrogen"=false
-    B:"Electrotine Ore"=true
+    B:"Electrotine Ore"=false
     I:"Electrotine Ore resistance"=0
     B:"Electrotine Ore retrogen"=false
-    B:"Marble Caves"=true
+    B:"Marble Caves"=false
     I:"Marble Caves resistance"=0
     B:"Marble Caves retrogen"=false
-    B:"Peridot Ore"=true
+    B:"Peridot Ore"=false
     I:"Peridot Ore resistance"=0
     B:"Peridot Ore retrogen"=false
-    B:"Ruby Ore"=true
+    B:"Ruby Ore"=false
     I:"Ruby Ore resistance"=0
     B:"Ruby Ore retrogen"=false
-    B:"Sapphire Ore"=true
+    B:"Sapphire Ore"=false
     I:"Sapphire Ore resistance"=0
     B:"Sapphire Ore retrogen"=false
-    B:"Silver Ore"=true
+    B:"Silver Ore"=false
     I:"Silver Ore resistance"=0
     B:"Silver Ore retrogen"=false
     B:"Spreading Moss"=true
-    B:"Tin Ore"=true
+    B:"Tin Ore"=false
     I:"Tin Ore resistance"=0
     B:"Tin Ore retrogen"=false
     I:"Volcano resistance"=0
     B:"Volcano retrogen"=false
-    B:Volcanos=true
+    B:Volcanos=false
 }
 
 
